🐛 fixed writing of NFO files to CaSe insensitive file systems